<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/width_dialog_delete_cardView_0"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_dialog_delete_0">

            <TextView
                android:id="@+id/popup_delete_tvAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_delete_text_tvAlert"
                android:textStyle="bold"
                android:textSize="@dimen/textSize_dialog_delete_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/popup_delete_btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dialog_delete_btn_20"
                android:backgroundTint="@color/white"
                android:text="@string/dialog_delete_text_btnYes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/popup_delete_btnCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup_delete_tvAlert" />

            <Button
                android:id="@+id/popup_delete_btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dialog_delete_btn_20"
                android:backgroundTint="@color/red"
                android:text="@string/dialog_delete_text_btnCancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/popup_delete_btnYes"
                app:layout_constraintTop_toBottomOf="@+id/popup_delete_tvAlert" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>